tests/ui/parser/issue-81804.rs
// error-pattern: this file contains an unclosed delimiter
// error-pattern: this file contains an unclosed delimiter
// error-pattern: expected pattern, found `=`
// error-pattern: expected one of `)`, `,`, `->`, `where`, or `{`, found `]`
// error-pattern: expected item, found `]`

fn main() {}

fn p([=(}

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
